# yt-transcriptor

./: README.md
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/handlers/: mod.rs  youtube.rs
backend/src/models/: mod.rs  youtube.rs
backend/src/routes/: mod.rs  youtube.rs
backend/src/utils/: audio.rs  mod.rs  youtube.rs
