[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum="0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
whisper-rs = "0.14.4"
hound = "3.5.1"
